--- a/ProjectWork.Web/Scripts/Application/Layout/sidebar.html
+++ b/ProjectWork.Web/Scripts/Application/Layout/sidebar.html
@@ -17,7 +17,7 @@
             <li><a ng-href="#/rental/">Rental history<i class="fa fa-leanpub fa-fw pull-right"></i></a></li>
             <li class="nav-divider"></li>-->
             <li><a ng-href="login" ng-if="!userData.isUserLoggedIn">Login<i class="fa fa-sign-in fa-fw pull-right"></i></a></li>
-            
+            <li><a ng-href="AddUsers" ng-if="userData.userRole">AddUsers<i class="fa fa-user-circle-o fa-fw pull-right" aria-hidden="true"></i></a></li>
             <!--<li><button type="button" class="btn btn-danger btn-sm" ng-click="logout();" ng-if="userData.isUserLoggedIn">Logout<i class="fa fa-sign-out fa-fw pull-right"></i></a></li>-->
             <li><a ng-href="login" ng-if="userData.isUserLoggedIn" ng-click="logout();">Logout<i class="fa fa-sign-out fa-fw pull-right"></i></a></li>
         </ul>
